Fixed results z-index

--- a/css/main.scss
+++ b/css/main.scss
@@ -642,6 +642,7 @@ strong {
 .resultsWrap {
   position: absolute;
   width: 100%;
+  z-index: 5;
 }
 
 .results {
@@ -664,6 +665,7 @@ strong {
 
   &:hover {
     background: $lightGrey;
+    cursor: pointer;
   }
 
   // beer name
